<resources>
    <string name="akyuu_app_name">Akyuu</string>
    <string name="dialog_add_title">Add</string>
    <string name="dialog_add_hint_content">Content</string>
    <string name="dialog_add_hint_hide">Hide</string>
    <string name="dialog_add_hint_priority">Priority</string>
    <string name="dialog_add_button_cancel">Cancel</string>
    <string name="dialog_add_button_confirm">Confirm</string>
    <string name="dialog_list_item_long_click_title">Choose One</string>
    <string name="main_button_start_title">Let\'s Go</string>
    <string name="main_button_list_title">List</string>
    <string name="main_button_settings_title">Settings</string>
    <string name="performance_already_first">Already the first!</string>
    <string name="performance_already_last">Already the last!</string>
    <string name="performance_already_max_priority">Already max priority</string>
    <string name="performance_already_min_priority">Already min priority</string>
    <string name="performance_hint_hided">Hided</string>
    <string name="activity_list_menu_title">Select Tag</string>
    <string name="dialog_add_hint_tag">Tag</string>

    <string name="list_item_hint_title">Title</string>
    <string name="list_item_hint_detail">Detail</string>
    <string name="list_menu_select_by_tag">Select by tag</string>
    <string name="list_menu_add_new_note">Add New Note</string>
    <string name="title_activity_settings">Settings</string>

    <string name="dialog_edit_tv_size">Size</string>
    <string name="dialog_edit_tv_gravity">Gravity</string>
    <string name="dialog_edit_rd_center">CENTER</string>
    <string name="dialog_edit_rd_start">START</string>
    <string name="dialog_edit_btn_discard">DISCARD</string>
    <string name="dialog_edit_btn_cancel">CANCEL</string>
    <string name="dialog_edit_btn_save">SAVE</string>
    <string name="dialog_edit_btn_ok">OK</string>
    <string name="dialog_edit_title_exit">Data has not been saved</string>
    <string name="dialog_edit_msg_exit">Whether to save data?</string>

    <string name="dialog_edit_brief_title">Edit Brief</string>

    <string name="dialog_edit_detail_title">Edit Detail</string>
    <string name="dialog_edit_detail_latex">Latexs</string>

    <string name="pref_setting_about_category_title">About</string>
    <string name="pref_setting_about_author_key">author</string>
    <string name="pref_setting_about_author_title">Author</string>
    <string name="pref_setting_about_author_summary"><![CDATA[White57030 <white57030@gmail.com>]]></string>

    <string name="pref_setting_about_category_key">settings_about</string>
    <string name="dialog_edit_extra_priority">Priority</string>
    <string name="dialog_edit_extra_tag_title">Tag</string>
    <string name="dialog_edit_extra_reference_title">Reference</string>
    <string name="dialog_edit_extra_title">Edit Extra</string>


</resources>
