<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >
    <com.xw.repo.XEditText
        android:id="@+id/dialog_edit_detail_et_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:shadowColor="@color/colorSecondaryAccent"
        style="@style/dialog_item"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialog_edit_tv_size"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/text_medium"
        style="@style/dialog_item"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        style="@style/dialog_item"
        >
        <SeekBar
            android:id="@+id/dialog_edit_detail_bar_size"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            />
        <EditText
            android:id="@+id/dialog_edit_detail_et_size"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="@dimen/text_medium"
            />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialog_edit_tv_gravity"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/text_medium"
        style="@style/dialog_item"
        />

    <RadioGroup
        android:id="@+id/dialog_edit_detail_radio_gravity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        style="@style/dialog_item"
        >

        <android.support.v7.widget.AppCompatRadioButton
            android:id="@+id/dialog_edit_detail_radio_gravity_start"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/dialog_edit_rd_start"
            />
        <android.support.v7.widget.AppCompatRadioButton
            android:id="@+id/dialog_edit_detail_radio_gravity_center"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/dialog_edit_rd_center"
            />


    </RadioGroup>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView
            android:id="@+id/dialog_edit_detail_tv_latex_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/dialog_edit_detail_latex"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/text_medium"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.03"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            style="@style/dialog_item"
            />
        <Button
            android:id="@+id/dialog_edit_detail_btn_latex_add"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/ic_add_black_24dp"
            android:foreground="?android:attr/selectableItemBackgroundBorderless"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.98"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:targetApi="lollipop"
            />


    </android.support.constraint.ConstraintLayout>


    <android.support.v7.widget.RecyclerView
        android:id="@+id/dialog_edit_detail_rv_latex"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/dialog_item"
        />


</LinearLayout>