<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/dialog_edit_extra_priority"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/text_medium"
        style="@style/dialog_item"
        />
    <com.xw.repo.BubbleSeekBar
        android:id="@+id/dialog_edit_extra_bar_priority"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/dialog_item"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        style="@style/dialog_item"
        >
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dialog_edit_extra_tag_title"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/text_medium"
                />
            <com.xw.repo.XEditText
                android:id="@+id/dialog_edit_extra_tag"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dialog_edit_extra_reference_title"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/text_medium"
                />
            <com.xw.repo.XEditText
                android:id="@+id/dialog_edit_extra_reference"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />
        </LinearLayout>

    </LinearLayout>
</LinearLayout>